--- a/_config.yml
+++ b/_config.yml
@@ -18,16 +18,16 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@example.com
+title: Toastmasters Apps
+email: ""
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  An interactive web app designed to assist in running Toastmasters meetings.
+  Developed by “Toast the Most FIL Club A” at Fidelity International, this toolset provides 
+  timekeeping and filler word tracking, and speaker management features for effective meeting facilitation.
+
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "https://toastthemost.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
+github_username:  toastthemost
 
 # Build settings
 theme: minima
