--- a/_config.yml
+++ b/_config.yml
@@ -19,9 +19,9 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Toastmasters Apps
-email: ""
+email: "vipin.kumarind@fidelity.co.in"
 description: >- # this means to ignore newlines until "baseurl:"
-  An interactive web app designed to assist in running Toastmasters meetings.
+  An interactive browser based app designed to assist in running Toastmasters meetings.
   Developed by “Toast the Most FIL Club A” at Fidelity International, this toolset provides 
   timekeeping and filler word tracking, and speaker management features for effective meeting facilitation.
 
@@ -31,6 +31,8 @@ github_username:  toastthemost
 
 # Build settings
 theme: minima
+sass:
+  style: compressed
 plugins:
   - jekyll-feed
 
