--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "toastthemost",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://toastthemost.github.io/toastthemost",
+  "homepage": "https://toastthemost.github.io/",
   "dependencies": {
     "@ant-design/icons": "^5.6.1",
     "@testing-library/dom": "^10.4.0",
